--- a/01_programming_basics/0106lt_tekstinės_eilutės.ipynb
+++ b/01_programming_basics/0106lt_tekstinės_eilutės.ipynb
@@ -209,10 +209,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " is beautiful\n"
+     ]
+    }
+   ],
+   "source": [
+    "tekstas = 'garden is beautiful place'\n",
+    "print(tekstas[6:19])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "star\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 'star on the sky'\n",
+    "print(result[0:4])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,6 +292,24 @@
     "zodis = \"wild wolf\"\n",
     "print(zodis[5:9])\n",
     "print(zodis[0:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ount\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'mountains' \n",
+    "print(word[1:5])"
    ]
   },
   {
