--- a/04_object_oriented_programming/0402lt_inkapsuliacija.ipynb
+++ b/04_object_oriented_programming/0402lt_inkapsuliacija.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mercedes\n",
+      "C-Class\n",
+      "2023\n",
+      "pilka\n"
+     ]
+    }
+   ],
    "source": [
     "trecias_automobilis = Automobilis('Mercedes', 'C-Class')\n",
     "\n",
@@ -82,11 +93,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automobilis Mercedes, C-Class nuvaziavo 50 km\n",
+      "Bendra auto info Mercedes, C-Class, nuvaziuota rida 50 km\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Automobilis:\n",
+    "    def __init__(self, marke, modelis, metai=2023, spalva='pilka', rida = 0):\n",
+    "        self.marke = marke\n",
+    "        self.modelis = modelis\n",
+    "        self.__metai = metai\n",
+    "        self.__spalva = spalva\n",
+    "        self.__rida = rida\n",
+    "\n",
+    "    def gauti_metus(self):\n",
+    "        return self.__metai\n",
+    "\n",
+    "    def gauti_spalva(self):\n",
+    "        return self.__spalva\n",
+    "    \n",
+    "    def vaziuoti(self, kilometrai):\n",
+    "        self.__rida += kilometrai\n",
+    "        print(f'Automobilis {self.marke}, {self.modelis} nuvaziavo {kilometrai} km')\n",
+    "\n",
+    "    def gauti_rida(self):\n",
+    "        return self.__rida\n",
+    "\n",
+    "trecias_automobilis = Automobilis('Mercedes', 'C-Class') \n",
+    "trecias_automobilis.vaziuoti(50)   \n",
+    "print(f'Bendra auto info {trecias_automobilis.marke}, {trecias_automobilis.modelis}, nuvaziuota rida {trecias_automobilis.gauti_rida()} km')"
    ]
   },
   {
@@ -182,11 +226,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lt9370440256987259\n",
+      "Lana Reme\n",
+      "Išimta 1000 Eur, likutis 1598 Eur\n",
+      "Įdėta pinigų 500 Eur, šio meto likutis yra 2098 Eur\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Banko_saskaita():\n",
+    "    def __init__(self, saskaitos_numeris, savininkas, likutis, Pin_kodas) -> None:\n",
+    "        self.saskaitos_numeris = saskaitos_numeris\n",
+    "        self.savininkas = savininkas\n",
+    "        self.__likutis = likutis\n",
+    "        self.__Pin_kodas = Pin_kodas\n",
+    "\n",
+    "    def isimti_pinigus(self, suma, Pin_kodas):\n",
+    "        if Pin_kodas == self.__Pin_kodas:\n",
+    "            if suma < self.__likutis and self.__likutis != 0:\n",
+    "                self.__likutis -= suma\n",
+    "                return f'Išimta {suma} Eur, likutis {self.__likutis} Eur'\n",
+    "            else:\n",
+    "                return 'Neteisingas Pin kodas.'\n",
+    "\n",
+    "    def ideti_pinigus(self, suma, Pin_kodas):\n",
+    "        if Pin_kodas == self.__Pin_kodas and suma > 0:\n",
+    "            self.__likutis += suma\n",
+    "            return f'Įdėta pinigų {suma} Eur, šio meto likutis yra {self.__likutis} Eur'\n",
+    "        else:\n",
+    "            return 'Neteisingas Pin kodas.'\n",
+    "\n",
+    "# Sukurta sąskaitą\n",
+    "eur_saskaita = Banko_saskaita('Lt9370440256987259', 'Lana Reme', likutis=2598, Pin_kodas=5987)\n",
+    "\n",
+    "# Spausdinam sąskaitos informaciją\n",
+    "print(eur_saskaita.saskaitos_numeris)\n",
+    "print(eur_saskaita.savininkas)\n",
+    "\n",
+    "# Isimti pinigus\n",
+    "atsakymas_isimti = eur_saskaita.isimti_pinigus(1000, 5987)\n",
+    "print(atsakymas_isimti)\n",
+    "\n",
+    "# Idėti pinigus\n",
+    "atsakymas_ideti = eur_saskaita.ideti_pinigus(500, 5987)\n",
+    "print(atsakymas_ideti)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -236,11 +331,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Knyga():\n",
+    "    def __init__(self, pavadinimas, autorius, bukle, puslapiu_skaicius):\n",
+    "       self.__pavadinimas = pavadinimas\n",
+    "       self.__autorius = autorius\n",
+    "       self.__bukle = bukle\n",
+    "       self.__puslapiu_skaicius = puslapiu_skaicius\n",
+    "\n",
+    "    def get_pavadinimas(self):\n",
+    "        return self.__pavadinimas\n",
+    "    \n",
+    "    def get_autorius(self):\n",
+    "        return self.__autorius\n",
+    "    \n",
+    "    def get_bukle(self):\n",
+    "        return self.__bukle\n",
+    "    \n",
+    "    def get_puslapiu_skaicius(self):\n",
+    "        return self.__puslapiu_skaicius\n",
+    "    \n",
+    "    def pakeisti_bukle(self, nauja_bukle):\n",
+    "        pakeitimu_galemybes = ['patenkinama', 'prasta', 'atnaujinta', 'sugadinta']\n",
+    "        if nauja_bukle in pakeitimu_galemybes:\n",
+    "            self.__bukle = nauja_bukle\n",
+    "        else:\n",
+    "            print(\"Netinkama būklė. Galimos reikšmės: patenkinama, prasta, atnaujinta, sugadinta\")\n",
+    "\n",
+    "   \n"
    ]
   }
  ],
@@ -260,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
