--- a/04_object_oriented_programming/0401en_answers.ipynb
+++ b/04_object_oriented_programming/0401en_answers.ipynb
@@ -127,9 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Markė: Toyota\n",
+      "Modelis: Camry\n",
+      "Papildomi poziciniai argumentai: ('2023', 'Automatinė')\n",
+      "Papildomos savybės:\n",
+      "spalva: Balta\n",
+      "variklio_galia: 150 kW\n"
+     ]
+    }
+   ],
    "source": [
     "class Automobilis:\n",
     "    def __init__(self, marke, modelis, *args, **kwargs):\n",
@@ -236,9 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Alice, ID: 101, Grade: A\n",
+      "Name: Bob, ID: 102, Grade: B\n",
+      "Name: Charlie, ID: 103, Grade: C\n",
+      "Name: Alice, Grade: A\n",
+      "Name: Bob, Grade: B\n",
+      "Name: Charlie, Grade: C\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the Student class\n",
     "class Student:\n",
@@ -292,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
