--- a/04_object_oriented_programming/0401lt_objektai_ir_klases.ipynb
+++ b/04_object_oriented_programming/0401lt_objektai_ir_klases.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,11 +202,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jusu kodo vieta"
+    "class Darbuotojas:\n",
+    "    vardas = ''\n",
+    "    pavarde = ''\n",
+    "    pareigos = ''\n",
+    "    atlyginimas = ''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pirmas_darbuotojas = Darbuotojas()\n",
+    "\n",
+    "pirmas_darbuotojas.vardas = 'Jony'\n",
+    "pirmas_darbuotojas.pavarde = 'Stown'\n",
+    "pirmas_darbuotojas.pareigos = 'Manager'\n",
+    "pirmas_darbuotojas.atlyginimas = 1720\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manager\n",
+      "1720\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pirmas_darbuotojas.pareigos)\n",
+    "print(pirmas_darbuotojas.atlyginimas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2100\n"
+     ]
+    }
+   ],
+   "source": [
+    "pirmas_darbuotojas.atlyginimas = 2100\n",
+    "\n",
+    "print(pirmas_darbuotojas.atlyginimas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jony\n",
+      "Stown\n",
+      "Manager\n",
+      "2100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pirmas_darbuotojas.vardas)\n",
+    "print(pirmas_darbuotojas.pavarde)\n",
+    "print(pirmas_darbuotojas.pareigos)\n",
+    "print(pirmas_darbuotojas.atlyginimas)"
    ]
   },
   {
@@ -265,11 +344,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "variklis ijungtas\n",
+      "variklis isjungtas\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Car():\n",
+    "    def start_engine(self):\n",
+    "        print('variklis ijungtas')\n",
+    "    def stop_engine(self):\n",
+    "        print('variklis isjungtas')    \n",
+    "\n",
+    "car_one = Car()\n",
+    "\n",
+    "car_one.start_engine()\n",
+    "car_one.stop_engine()\n",
+    "    "
    ]
   },
   {
@@ -285,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,13 +438,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vardas: Ula\n",
+      "Amzius: 23\n",
+      "Lytis: moteris\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def __init__(self, vardas, amzius=0, lytis='Nežinoma'):\n",
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "        self.vardas = vardas\n",
+    "        self.amzius = amzius\n",
+    "        self.lytis = lytis\n",
+    "\n",
+    "asmens_info = Person('Ula', 23, 'moteris')\n",
+    "\n",
+    "print('Vardas:', asmens_info.vardas)\n",
+    "print('Amzius:', asmens_info.amzius)\n",
+    "print('Lytis:',  asmens_info.lytis)\n",
+    "\n",
+    "       "
    ]
   },
   {
@@ -460,11 +580,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automobilio marke: Audi\n",
+      "Automobilio modelis: Q7\n",
+      "Automobilio papildoma informacija: (2020, 'juoda', 3.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Automobilis():\n",
+    "    def __init__(self, marke, modelis, *args) -> None:\n",
+    "        self.marke = marke\n",
+    "        self.modelis = modelis\n",
+    "        self.papildomi_args = args\n",
+    "\n",
+    "    def rodyti_papildomus(self):\n",
+    "        print(f'Automobilio marke: {self.marke}')\n",
+    "        print(f'Automobilio modelis: {self.modelis}')\n",
+    "        print(f'Automobilio papildoma informacija: {self.papildomi_args}')    \n",
+    "\n",
+    "car_one = Automobilis('Audi', 'Q7', 2020, 'juoda', 3.0)\n",
+    "\n",
+    "car_one.rodyti_papildomus()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automobilio papildomos savybes:\n",
+      "metai: 2020\n",
+      "spalva: juoda\n",
+      "varyklio_turis: 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Automobilis():\n",
+    "    def __init__(self, marke, modelis, **kwargs) -> None:\n",
+    "        self.marke = marke\n",
+    "        self.modelis = modelis\n",
+    "        self.papildomos_savybes = kwargs\n",
+    "\n",
+    "    def rodyti_papildomos_savybes(self):\n",
+    "        print('Automobilio papildomos savybes:')\n",
+    "        for key, value in self.papildomos_savybes.items():\n",
+    "            print(f'{key}: {value}')\n",
+    "         \n",
+    "\n",
+    "car_one = Automobilis('Audi', 'Q7', metai=2020, spalva='juoda', varyklio_turis=3.0)\n",
+    "\n",
+    "car_one.rodyti_papildomos_savybes()"
    ]
   },
   {
@@ -540,11 +718,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pavadinimas: Drugeliu kambaris\n",
+      " Autorius: Liusinda Raili\n",
+      " 2021 = leidimo_metai\n",
+      " zanras: novel\n",
+      "\n",
+      "Pavadinimas: Thinking, Fast and Slow\n",
+      " Autorius: Daniel Kahneman\n",
+      " 2016 = leidimo_metai\n",
+      " zanras: bestseleris\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Knyga():\n",
+    "    def __init__(self, pavadinimas, autorius, leidimo_metai=2021, zanras='novel') -> None:\n",
+    "        self.pavadinimas = pavadinimas\n",
+    "        self.autorius = autorius\n",
+    "        self.leidimo_metai = leidimo_metai\n",
+    "        self.zanras = zanras\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f'Pavadinimas: {self.pavadinimas}\\n Autorius: {self.autorius}\\n {self.leidimo_metai} = leidimo_metai\\n zanras: {self.zanras}\\n'\n",
+    "    \n",
+    "idomi_knyga = Knyga('Drugeliu kambaris', 'Liusinda Raili', 2021, 'novel')\n",
+    "print(idomi_knyga)\n",
+    "pazintine_knyga = Knyga('Thinking, Fast and Slow', 'Daniel Kahneman', 2016, 'bestseleris')\n",
+    "print(pazintine_knyga)"
    ]
   },
   {
@@ -562,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,9 +922,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Automobilis.__init__() takes 3 positional arguments but 5 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[48], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m automobiliai \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 3\u001b[0m pirmas_automobilis \u001b[38;5;241m=\u001b[39m \u001b[43mAutomobilis\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAudi\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mA6\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2019\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbalta\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[0;32m      4\u001b[0m antras_automobilis \u001b[38;5;241m=\u001b[39m Automobilis(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBMW\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX5\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m2021\u001b[39m) \n\u001b[0;32m      5\u001b[0m ketvirtas_automobilis \u001b[38;5;241m=\u001b[39m Automobilis(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVolkswagen\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGolf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Automobilis.__init__() takes 3 positional arguments but 5 were given"
+     ]
+    }
+   ],
    "source": [
     "automobiliai = []\n",
     "\n",
@@ -794,11 +1015,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vardas: Jony, ID: 111, pazymys: Q\n",
+      "vardas: Bill, ID: 112, pazymys: W\n",
+      "vardas: Ben, ID: 113, pazymys: J\n",
+      "vardas Jony, pazymys: Q\n",
+      "vardas Bill, pazymys: W\n",
+      "vardas Ben, pazymys: J\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Studentas():\n",
+    "    def __init__(self, vardas, studento_id, pazymys) -> None:\n",
+    "        self.vardas = vardas\n",
+    "        self.studento_id = studento_id\n",
+    "        self.pazymys = pazymys\n",
+    "\n",
+    "studentu_sarasas = []        \n",
+    "\n",
+    "pirmas_studentas = Studentas('Jony', 111, 'Q')\n",
+    "antras_studentas = Studentas('Bill', 112, 'W')\n",
+    "trecias_studentas = Studentas('Ben', 113, 'J')\n",
+    "studentu_sarasas.append(pirmas_studentas)\n",
+    "studentu_sarasas.append(antras_studentas)\n",
+    "studentu_sarasas.append(trecias_studentas)\n",
+    "\n",
+    "for studentas in studentu_sarasas:\n",
+    "    print(f'vardas: {studentas.vardas}, ID: {studentas.studento_id}, pazymys: {studentas.pazymys}')\n",
+    "\n",
+    "\n",
+    "studentu_zodynas = {}\n",
+    "\n",
+    "studentu_zodynas['Jony'] = pirmas_studentas\n",
+    "studentu_zodynas['Bill'] = antras_studentas\n",
+    "studentu_zodynas['Ben'] = trecias_studentas\n",
+    "\n",
+    "for vardas, studentas in studentu_zodynas.items():\n",
+    "    print(f'vardas {vardas}, pazymys: {studentas.pazymys}')\n",
+    "        \n",
+    " "
    ]
   }
  ],
@@ -818,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
