--- a/04_object_oriented_programming/0402en_incapsulation_answers.ipynb
+++ b/04_object_oriented_programming/0402en_incapsulation_answers.ipynb
@@ -48,9 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid password. Unable to scan.\n",
+      "200 € successfully read. Current account balance: 800 €\n",
+      "100 € successfully read. Current account balance: 700 €\n",
+      "500 € successfully topped up. Current account balance: 1200 €\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 1\n",
     "class BankAccount:\n",
@@ -84,9 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deposited 500. New balance is 1500.\n",
+      "Withdrew 200. New balance is 1300.\n",
+      "Invalid PIN. Access denied.\n",
+      "The account balance is: 1300\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 2\n",
     "class BankAccount:\n",
@@ -218,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
