--- a/04_object_oriented_programming/0404lt_abstrakcija.ipynb
+++ b/04_object_oriented_programming/0404lt_abstrakcija.ipynb
@@ -170,7 +170,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jusu kodo vieta"
+    "class Baseinas():\n",
+    "    def __init__(self, talpa, kiekis):\n",
+    "        self.talpa = talpa\n",
+    "        self.kiekis = kiekis\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def gauti_vandens_esama_kieki(self):\n",
+    "        return self.kiekis\n",
+    "\n",
+    "\n",
+    "    def vandens_papildymas(self, papildymo_kiekis):\n",
+    "        if self.kiekis + papildymo_kiekis <= self.talpa:\n",
+    "            self.kiekis += papildymo_kiekis\n",
+    "            print(f'Vanduo papildytas.Kiekis baseine yra: {self.kiekis} litrų.')\n",
+    "        else:\n",
+    "            print('Nepavyko papildyti baseino, baseine yra perdaug vandens.')\n",
+    "\n",
+    "    def vandens_nuleidimas(self, nuleidimo_kiekis):\n",
+    "        if nuleidimo_kiekis <= self.kiekis:\n",
+    "            self.kiekis -= nuleidimo_kiekis\n",
+    "            print(f'Nuleidome vandeni.Kiekis: {self.kiekis} litrų.')\n",
+    "        else:\n",
+    "            print('Nepavyko nuleisti vandens.')\n",
+    "\n",
+    "baseinas1 = Baseinas(talpa=1300, kiekis=250)\n",
+    "\n",
+    "print(f'Esamas vandens kiekis: {baseinas1.gauti_vandens_esama_kieki()} litrų.')\n",
+    "\n",
+    "baseinas1.vandens_papildymas(500)\n",
+    "baseinas1.vandens_nuleidimas(150)\n",
+    "\n",
+    "print(f'Galutinis vandens kiekis: {baseinas1.gauti_vandens_esama_kieki()} litrų.')\n",
+    "        "
    ]
   }
  ],
