--- a/04_object_oriented_programming/0403lt_paveldejimas.ipynb
+++ b/04_object_oriented_programming/0403lt_paveldejimas.ipynb
@@ -143,11 +143,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vilkas-Rey\n",
+      "Riztingai...\n",
+      "Katyte-Milka\n",
+      "miaumiaumiau\n",
+      "Zaismingai ir linksmai...\n",
+      "Suniukas-Barni\n",
+      "waf, waf\n",
+      "Greitai, garsiai, vizgiant uodega...\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "class Gyvunai:\n",
+    "    def __init__(self, vardas ):\n",
+    "        self.vardas = vardas\n",
+    "\n",
+    "    def balsas(self):\n",
+    "        pass\n",
+    "\n",
+    "    def judejimas(self):\n",
+    "        print('Riztingai...')     \n",
+    "\n",
+    "class Kate(Gyvunai):\n",
+    "    \n",
+    "    def balsas(self):\n",
+    "        print('miau' * 3)  \n",
+    "\n",
+    "    def judejimas(self):\n",
+    "        print('Zaismingai ir linksmai...')       \n",
+    "\n",
+    "class Suo(Gyvunai):\n",
+    "\n",
+    "    def balsas(self):\n",
+    "        print('waf, waf')\n",
+    "\n",
+    "    def judejimas(self):\n",
+    "        print('Greitai, garsiai, vizgiant uodega...')  \n",
+    "\n",
+    "vilkas = Gyvunai('Vilkas-Rey')\n",
+    "kate = Kate('Katyte-Milka')\n",
+    "suo = Suo('Suniukas-Barni')\n",
+    "\n",
+    "print(vilkas.vardas)\n",
+    "vilkas.balsas()\n",
+    "vilkas.judejimas()\n",
+    "\n",
+    "print(kate.vardas)\n",
+    "kate.balsas()\n",
+    "kate.judejimas()\n",
+    "\n",
+    "print(suo.vardas)\n",
+    "suo.balsas()\n",
+    "suo.judejimas()          "
    ]
   },
   {
@@ -157,14 +212,6 @@
     "---\n",
     "\n",
     "## Objekto priklausymo klasei patikrinimas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- `isinstance` yra funkcija, kuri leidžia patikrinti, ar objektas priklauso tam tikrai klasei \n",
-    "- Ši funkcija grąžina `True`, jei objektas yra tos klasės objektas arba objekto klasė paveldi nurodytą klasę, ir `False` kitu atveju. Pvz.:"
    ]
   },
   {
@@ -193,11 +240,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "kate = Gyvunai('katyte-Milka')\n",
+    "suo = Gyvunai('suniukas-Barni')\n",
+    "\n",
+    "print(isinstance(kate, Gyvunai))\n",
+    "print(isinstance(suo, Gyvunai))\n",
+    "print(isinstance(vilkas, Suo))\n",
+    "print(isinstance(kate, Suo))"
    ]
   }
  ],
@@ -217,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
