--- a/04_object_oriented_programming/0405lt_polimorfizmas.ipynb
+++ b/04_object_oriented_programming/0405lt_polimorfizmas.ipynb
@@ -86,11 +86,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suo sako Vaf, vaf, vaf\n",
+      "Kate sako Miau, miau, miau\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "class Animal:\n",
+    "    def __init__(self, vardas):\n",
+    "        self.vardas = vardas\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        print('Gyvunas skleidzia garsa:')\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def make_sound(self):\n",
+    "        print(\"Suo sako Vaf, vaf, vaf\")\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def make_sound(self):\n",
+    "        print('Kate sako Miau, miau, miau')  \n",
+    "\n",
+    "animal = Animal()\n",
+    "bimas = Dog('Bimas')\n",
+    "murke = Cat('Murke')\n",
+    "\n",
+    "\n",
+    "bimas.make_sound()  \n",
+    "murke.make_sound()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -104,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +195,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "darbuotojas:\tJony Bill, atlyginimas: 1200 €\n",
+      "darbuotojas:\tBen Klaim, atlyginimas: 1200 €\n",
+      "admin:\t\tLiusi Klaim, atlyginimas: 1500 €\n",
+      "vadovas:\tNilson Carry, atlyginimas: 2500 €\n",
+      "Premija: visiems darbuotojams uz gerus pasiekimus 700 €\n"
+     ]
+    }
+   ],
+   "source": [
+    "# jusu kodo vieta\n",
+    "class Darbuotojai():\n",
+    "    def __init__(self, vardas, pavarde, atlyginimas):\n",
+    "        self.vardas = vardas\n",
+    "        self.pavarde = pavarde\n",
+    "        self.atlyginimas = atlyginimas\n",
+    "        \n",
+    "\n",
+    "    def info(self):\n",
+    "        print(f'{self.vardas} {self.pavarde}, atlyginimas: {self.atlyginimas} €')        \n",
+    "\n",
+    "   \n",
+    "class Administratoriai(Darbuotojai):\n",
+    "    def info(self):\n",
+    "        print(f'{self.vardas} {self.pavarde}, atlyginimas: {self.atlyginimas} €') \n",
+    "\n",
+    "\n",
+    "class Vadovai(Darbuotojai):\n",
+    "    def __init__(self, vardas, pavarde, atlyginimas, premija):\n",
+    "        super().__init__(vardas, pavarde, atlyginimas)\n",
+    "        self.premija = premija\n",
+    "\n",
+    "    def info(self):\n",
+    "        super().info()\n",
+    "        print(f'Premija: visiems darbuotojams uz gerus pasiekimus {self.premija} €')\n",
+    "\n",
+    "\n",
+    "pirmas_darbuotojas = Darbuotojai('darbuotojas:''\\t''Jony', 'Bill', 1200)\n",
+    "antras_darbuotojas = Darbuotojai('darbuotojas:''\\t''Ben', 'Klaim', 1200)\n",
+    "admin_darbuotojas = Administratoriai('admin:''\\t''\\t''Liusi', 'Klaim', 1500)\n",
+    "vadovas = Vadovai('vadovas:''\\t''Nilson', 'Carry', 2500, 700)\n",
+    "\n",
+    "darbuotojai = [pirmas_darbuotojas, antras_darbuotojas, admin_darbuotojas, vadovas]\n",
+    "\n",
+    "for darbuotojas in darbuotojai:\n",
+    "    darbuotojas.info()\n",
+    "   \n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "        \n",
+    "\n",
+    "               \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# jusu kodo vieta"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -184,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
