--- a/04_object_oriented_programming/0405en_answers.ipynb
+++ b/04_object_oriented_programming/0405en_answers.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dog barks\n",
+      "The cat meows\n"
+     ]
+    }
+   ],
    "source": [
     "class Animal:\n",
     "    def make_sound(self):\n",
@@ -147,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
