--- a/05_projects_modules_and_imports/0502lt_standartiniu_biblioteku_importavimas.ipynb
+++ b/05_projects_modules_and_imports/0502lt_standartiniu_biblioteku_importavimas.ipynb
@@ -51,9 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1853173911751993\n",
+      "9\n",
+      "d\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -84,11 +94,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list [49, 73, 69, 23, 100, 89, 52, 91, 27, 49]\n",
+      "sorted [23, 27, 49, 49, 52, 69, 73, 89, 91, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "import random\n",
+    "\n",
+    "def print_and_sort_random_numbers():\n",
+    "    random_numbers = []\n",
+    "    for _ in range(10): \n",
+    "      random_numbers.append(random.randint(1, 100))\n",
+    "\n",
+    "    print('Original list', random_numbers)\n",
+    "\n",
+    "    random_numbers.sort()\n",
+    "\n",
+    "    print('sorted', random_numbers)\n",
+    "\n",
+    "\n",
+    "print_and_sort_random_numbers()\n",
+    "    \n",
+    "\n",
+    "   "
    ]
   },
   {
@@ -139,11 +176,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "2\n",
+      "jus pralaimejote!\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "import random\n",
+    "\n",
+    "atsitiktiniai_skaiciai = (random.randint(1, 6))\n",
+    "for _ in range(3): \n",
+    "    print(atsitiktiniai_skaiciai)\n",
+    "\n",
+    "\n",
+    "if 'atsakymas' != 0 or 'atsakymas' == 5 in atsitiktiniai_skaiciai:\n",
+    "    print('jus pralaimejote!')   \n",
+    "else: \n",
+    "    print('you win')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -208,11 +269,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024 vasario menesi yra 8 savaitgalių dienos.\n",
+      "   February 2024\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      "          1  2  3  4\n",
+      " 5  6  7  8  9 10 11\n",
+      "12 13 14 15 16 17 18\n",
+      "19 20 21 22 23 24 25\n",
+      "26 27 28 29\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "import calendar\n",
+    "\n",
+    "def print_month_calendar(metai, menuo):\n",
+    "    print(calendar.month(metai, menuo))\n",
+    "\n",
+    "\n",
+    "def savaitgaliu_skaicius(menesio, metai):\n",
+    "    dienos_menesyje = calendar.monthrange(metai, menesio)[1]\n",
+    "    savaitgaliu_dienos = 0\n",
+    "\n",
+    "    for diena in range(1, dienos_menesyje +1):\n",
+    "        savaites_diena = calendar.weekday(metai, menesio, diena)\n",
+    "        if savaites_diena >= 5: \n",
+    "            savaitgaliu_dienos += 1\n",
+    "\n",
+    "    return savaitgaliu_dienos\n",
+    "\n",
+    "metai = 2024\n",
+    "menesio = 2\n",
+    "rezultatas = savaitgaliu_skaicius(menesio, metai)\n",
+    "\n",
+    "print(f\"{metai} vasario menesi yra {rezultatas} savaitgalių dienos.\")\n",
+    "\n",
+    "\n",
+    "print_month_calendar(2024, 2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(calendar.FRIDAY, 31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import calendar\n",
+    "\n",
+    "print(calendar.monthrange(2024, 3))"
    ]
   }
  ],
@@ -232,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
