--- a/05_projects_modules_and_imports/0501lt_moduliu_kurimas_importavimas.ipynb
+++ b/05_projects_modules_and_imports/0501lt_moduliu_kurimas_importavimas.ipynb
@@ -443,9 +443,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'projektas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprojektas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometrija\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m trikampio_plotas, apskritimo_plotas\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'projektas'"
+     ]
+    }
+   ],
    "source": [
     "from projektas.geometrija import trikampio_plotas, apskritimo_plotas"
    ]
@@ -497,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
