--- a/06_error_handling_exceptions_debug/0602en_exceptions.ipynb
+++ b/06_error_handling_exceptions_debug/0602en_exceptions.ipynb
@@ -57,11 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "home_number = 25\n",
+    "home_adress = 'Green streat'\n",
+    "try:\n",
+    "    result = home_number + home_adress\n",
+    "except TypeError:\n",
+    "    print('Error')    \n"
    ]
   },
   {
@@ -116,11 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: name is not found\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "age = 33\n",
+    "try:\n",
+    "    print(name)\n",
+    "except Exception:\n",
+    "    print('Error: name is not found')    "
    ]
   },
   {
@@ -157,11 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error, you cant convert value to number\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "try:\n",
+    "    phone_number = int('voisweblt')\n",
+    "except ValueError:\n",
+    "    print('Error, you cant convert value to number')   "
    ]
   },
   {
@@ -201,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n"
    ]
   },
   {
@@ -240,11 +279,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: index five not in the fruit list\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "fruit_list = ['apple', 'cherry', 'lime']\n",
+    "try:\n",
+    "    print(fruit_list[5])\n",
+    "\n",
+    "except Exception:\n",
+    "    print('Error: index five not in the fruit list')"
    ]
   },
   {
@@ -282,11 +336,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "info_dict, dont have a desk in the list\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "info_dict = {'table': 5, 'bed': 3, 'chair': 5, 'wardrobe': 1}\n",
+    "try: \n",
+    "    print(info_dict['bed'])\n",
+    "    print(info_dict['desk'])\n",
+    "except KeyError:\n",
+    "    print('info_dict, dont have a desk in the list')"
    ]
   },
   {
@@ -493,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
