--- a/07_date_time/0701en_date.ipynb
+++ b/07_date_time/0701en_date.ipynb
@@ -294,6 +294,218 @@
     "\n",
     "Create a function that accepts a date as a string (for example, \"06/01/2023\") and returns what day of the week that date is (for example, \"Monday\", \"Tuesday\", etc.)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Pirma užduotis'\n",
+    "'Parašykite programą, kuri pateiktų dabartinį laiką, bet tik minutes ir sekundes.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29:57\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "dabar = datetime.now()\n",
+    "string_format = '%M:%S'\n",
+    "\n",
+    "laikas = dabar.strftime(string_format) \n",
+    "print(laikas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Antra užduotis'\n",
+    "'Sukurkite funkciją, kuri priimtų gimimo datą kaip stringą (formatu \"%Y-%m-%d\") ir grąžintų, kiek dienų liko iki jūsų gimtadienio'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dabar: 2024-01-16 09:35:07.581023\n",
+      "Iki gimtadienio liko: 297 days, 0:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "dabar = datetime.now()\n",
+    "print(\"Dabar:\", dabar)\n",
+    "\n",
+    "date1 = datetime(2024, 1, 16)\n",
+    "date2 = datetime(2024, 11, 8)\n",
+    "skirtumas = date2 - date1\n",
+    "print(\"Iki gimtadienio liko:\", skirtumas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liko 296 dienos (-ų) iki gimtadienio.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def dienos_iki_gimtadienio(gimimo_data):\n",
+    "    gimimo_data_format = datetime.strptime(gimimo_data, \"%Y-%m-%d\")\n",
+    "    siandiena = datetime.now()\n",
+    "    gimtadienio_data = gimimo_data_format.replace(year=siandiena.year)\n",
+    "\n",
+    "    if gimtadienio_data < siandiena:\n",
+    "        gimtadienio_data = gimtadienio_data.replace(year=siandiena.year + 1)\n",
+    "\n",
+    "    skirtumas = gimtadienio_data - siandiena\n",
+    "    return skirtumas.days\n",
+    "\n",
+    "gimimo_data = \"2024-11-08\"\n",
+    "print(f\"Liko {dienos_iki_gimtadienio(gimimo_data)} dienos (-ų) iki gimtadienio.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Trečia užduotis'\n",
+    "'Parašykite programą, kuri priimtų datą ir laiką stringo formatu (pavyzdžiui, \"2023-05-21 15:30\"),' \n",
+    "'pridėtų prie to 48 valandas ir grąžintų naują datą ir laiką stringo formatu'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plius 48 valandas: 2023-05-23 15:30\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def plius_48_valandas(data_laikas):\n",
+    "    format_string = \"%Y-%m-%d %H:%M\"\n",
+    "    data_objektas = datetime.strptime(data_laikas, format_string)\n",
+    "    naujas_data_objektas = data_objektas + timedelta(hours=48)\n",
+    "    naujas_data_laikas = naujas_data_objektas.strftime(format_string)\n",
+    "    return naujas_data_laikas\n",
+    "\n",
+    "data_laikas = \"2023-05-21 15:30\"\n",
+    "print(f\"Plius 48 valandas: {plius_48_valandas(data_laikas)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Ketvirta užduotis'\n",
+    "'Parašykite programą, kuri priimtų du laikotarpius kaip timestampus ir grąžintų laikotarpių skirtumą dienomis.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skirtumas dienomis: 30 dienu\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def skirtumas_dienomis(timestamp1, timestamp2):\n",
+    "    objektas_data1 = datetime.fromtimestamp(timestamp1)\n",
+    "    objektas_data2 = datetime.fromtimestamp(timestamp2)\n",
+    "    skirtumas = abs(objektas_data2 - objektas_data1)\n",
+    "    return skirtumas.days\n",
+    "\n",
+    "timestamp1 = 1671395400\n",
+    "timestamp2 = 1674000000\n",
+    "print(f\"Skirtumas dienomis: {skirtumas_dienomis(timestamp1, timestamp2)} dienu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Penkta užduotis'\n",
+    "'Sukurkite funkciją, kuri priimtų datą kaip stringą (pavyzdžiui, \"2023-06-01\")'\n",
+    "'ir grąžintų, kokia savaitės diena yra ta data (pavyzdžiui, \"Pirmadienis\", \"Antradienis\" ir tt.).'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date is Thursday\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def weekdays(date):\n",
+    "    format_string = \"%Y-%m-%d\"\n",
+    "    date_object = datetime.strptime(data, format_string)\n",
+    "    days = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Suturday\", \"Sunday\"]\n",
+    "    return days[date_object.weekday()]\n",
+    "\n",
+    "data = \"2016-06-18\"\n",
+    "print(f\"Date is {weekdays(date)}\")"
+   ]
   }
  ],
  "metadata": {
@@ -312,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
