--- a/07_date_time/0702en_timezone.ipynb
+++ b/07_date_time/0702en_timezone.ipynb
@@ -180,6 +180,241 @@
     "\n",
     "Write a program that asks the user for the time in HH:MM(:SS) format, where seconds are not necessary. Then ask for a time zone. Print the entered time in the following time zones: Sydney, Dubai, Vilnius, London, New York and Los Angeles."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "America/Boa_Vista\n",
+      "America/Indiana/Petersburg\n",
+      "America/Cordoba\n",
+      "America/Porto_Acre\n",
+      "America/Havana\n",
+      "America/Adak\n",
+      "America/Phoenix\n",
+      "America/Atikokan\n",
+      "America/Santo_Domingo\n",
+      "America/Jamaica\n",
+      "America/Mexico_City\n",
+      "America/Montserrat\n",
+      "America/Grenada\n",
+      "America/St_Barthelemy\n",
+      "America/Indiana/Vevay\n",
+      "America/Goose_Bay\n",
+      "America/Tegucigalpa\n",
+      "America/Toronto\n",
+      "America/Tortola\n",
+      "America/Argentina/Rio_Gallegos\n",
+      "America/Cancun\n",
+      "America/Belem\n",
+      "America/Indiana/Winamac\n",
+      "America/North_Dakota/Center\n",
+      "America/Aruba\n",
+      "America/Nome\n",
+      "America/Rio_Branco\n",
+      "America/Guayaquil\n",
+      "America/Glace_Bay\n",
+      "America/Whitehorse\n",
+      "America/Cambridge_Bay\n",
+      "America/Barbados\n",
+      "America/Jujuy\n",
+      "America/Coral_Harbour\n",
+      "America/Swift_Current\n",
+      "America/Santarem\n",
+      "America/Recife\n",
+      "America/Thule\n",
+      "America/Detroit\n",
+      "America/Edmonton\n",
+      "America/Monterrey\n",
+      "America/Kentucky/Louisville\n",
+      "America/Virgin\n",
+      "America/Guyana\n",
+      "America/Indiana/Knox\n",
+      "America/St_Lucia\n",
+      "America/La_Paz\n",
+      "America/Caracas\n",
+      "America/Argentina/Mendoza\n",
+      "America/Cayenne\n",
+      "America/Juneau\n",
+      "America/Chihuahua\n",
+      "America/Argentina/Tucuman\n",
+      "America/Port-au-Prince\n",
+      "America/Bahia\n",
+      "America/Montevideo\n",
+      "America/Miquelon\n",
+      "America/Marigot\n",
+      "America/Argentina/Salta\n",
+      "America/Rosario\n",
+      "America/Rainy_River\n",
+      "America/Matamoros\n",
+      "America/Ciudad_Juarez\n",
+      "America/Nipigon\n",
+      "America/Lower_Princes\n",
+      "America/Menominee\n",
+      "America/Ensenada\n",
+      "America/Anguilla\n",
+      "America/Argentina/San_Juan\n",
+      "America/Porto_Velho\n",
+      "America/Belize\n",
+      "America/St_Kitts\n",
+      "America/Anchorage\n",
+      "America/Denver\n",
+      "America/Pangnirtung\n",
+      "America/New_York\n",
+      "America/Puerto_Rico\n",
+      "America/Moncton\n",
+      "America/Punta_Arenas\n",
+      "America/Danmarkshavn\n",
+      "America/Scoresbysund\n",
+      "America/Kralendijk\n",
+      "America/Panama\n",
+      "America/Knox_IN\n",
+      "America/Paramaribo\n",
+      "America/Campo_Grande\n",
+      "America/Dawson\n",
+      "America/El_Salvador\n",
+      "America/Santa_Isabel\n",
+      "America/Nassau\n",
+      "America/Indiana/Marengo\n",
+      "America/Yakutat\n",
+      "America/Manaus\n",
+      "America/Araguaina\n",
+      "America/Inuvik\n",
+      "America/Sao_Paulo\n",
+      "America/Fortaleza\n",
+      "America/Los_Angeles\n",
+      "America/Halifax\n",
+      "America/Dawson_Creek\n",
+      "America/Chicago\n",
+      "America/Argentina/Cordoba\n",
+      "America/Indiana/Indianapolis\n",
+      "America/Bahia_Banderas\n",
+      "America/Atka\n",
+      "America/Guatemala\n",
+      "America/Iqaluit\n",
+      "America/Dominica\n",
+      "America/Noronha\n",
+      "America/Santiago\n",
+      "America/Montreal\n",
+      "America/North_Dakota/Beulah\n",
+      "America/Thunder_Bay\n",
+      "America/Argentina/San_Luis\n",
+      "America/Mazatlan\n",
+      "America/Ojinaga\n",
+      "America/Martinique\n",
+      "America/Boise\n",
+      "America/Indiana/Tell_City\n",
+      "America/Kentucky/Monticello\n",
+      "America/Vancouver\n",
+      "America/Antigua\n",
+      "America/Creston\n",
+      "America/Blanc-Sablon\n",
+      "America/Indianapolis\n",
+      "America/Shiprock\n",
+      "America/Tijuana\n",
+      "America/St_Thomas\n",
+      "America/Bogota\n",
+      "America/Resolute\n",
+      "America/Argentina/Jujuy\n",
+      "America/Buenos_Aires\n",
+      "America/Fort_Wayne\n",
+      "America/Sitka\n",
+      "America/Merida\n",
+      "America/Godthab\n",
+      "America/Argentina/La_Rioja\n",
+      "America/Cuiaba\n",
+      "America/Managua\n",
+      "America/Argentina/Ushuaia\n",
+      "America/Yellowknife\n",
+      "America/Curacao\n",
+      "America/Grand_Turk\n",
+      "America/Catamarca\n",
+      "America/Eirunepe\n",
+      "America/St_Vincent\n",
+      "America/Nuuk\n",
+      "America/Maceio\n",
+      "America/North_Dakota/New_Salem\n",
+      "America/Winnipeg\n",
+      "America/Fort_Nelson\n",
+      "America/Argentina/Buenos_Aires\n",
+      "America/Regina\n",
+      "America/Mendoza\n",
+      "America/Asuncion\n",
+      "America/Hermosillo\n",
+      "America/St_Johns\n",
+      "America/Argentina/Catamarca\n",
+      "America/Louisville\n",
+      "America/Lima\n",
+      "America/Metlakatla\n",
+      "America/Argentina/ComodRivadavia\n",
+      "America/Indiana/Vincennes\n",
+      "America/Costa_Rica\n",
+      "America/Port_of_Spain\n",
+      "America/Guadeloupe\n",
+      "America/Cayman\n",
+      "America/Rankin_Inlet\n"
+     ]
+    }
+   ],
+   "source": [
+    "from zoneinfo import available_timezones\n",
+    "\n",
+    "def spausdinti_amerikos_laiko_juostas():\n",
+    "    for laiko_juosta in available_timezones():\n",
+    "        if 'America' in laiko_juosta:\n",
+    "            print(laiko_juosta)\n",
+    "\n",
+    "spausdinti_amerikos_laiko_juostas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jusu laikas: 15:15:00, Europe\\Vilnius\n",
+      "Sydnejaus laikas: 23:51:00, Australia/Sydney\n",
+      "Dubajaus laikas: 17:32:12, Asia/Dubai\n",
+      "Londono laikas: 13:51:00, Europe/London\n",
+      "New Yorko laikas: 08:51:00, America/New York\n",
+      "Los Angeles laikas: 05:51:00, America/ Los Angeles\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "from zoneinfo import ZoneInfo\n",
+    "\n",
+    "ivestas_laikas = input(\"Iveskite laika formatu HH:MM(:SS), sekundes nera butinos\")\n",
+    "formatas = \"%H:%M\"\n",
+    "vartotojo_laiko_zona = input(\"iveskite laiko zona pvz.:\\\"America/Barbados\\\"\")\n",
+    "\n",
+    "if len(ivestas_laikas) > 5:\n",
+    "    formatas = \"%H:%M:%S\"\n",
+    "laikas = datetime.strptime(ivestas_laikas, formatas)\n",
+    "\n",
+    "sydney = laikas.replace(tzinfo=ZoneInfo(vartotojo_laiko_zona)).astimezone(ZoneInfo(\"Australia/Sydney\"))\n",
+    "dubai = laikas.replace(tzinfo=ZoneInfo(vartotojo_laiko_zona)).astimezone(ZoneInfo(\"Asia/Dubai\"))\n",
+    "london = laikas.replace(tzinfo=ZoneInfo(vartotojo_laiko_zona)).astimezone(ZoneInfo(\"Europe/London\"))\n",
+    "new_york = laikas.replace(tzinfo=ZoneInfo(vartotojo_laiko_zona)).astimezone(ZoneInfo(\"America/New_York\"))\n",
+    "los_angeles = laikas.replace(tzinfo=ZoneInfo(vartotojo_laiko_zona)).astimezone(ZoneInfo(\"America/Los_Angeles\"))\n",
+    "\n",
+    "print(f\"\"\"Jusu laikas: {laikas.time()}, {vartotojo_laiko_zona}\n",
+    "Sydnejaus laikas: {sydney.time()}, Australia/Sydney\n",
+    "Dubajaus laikas: {dubai.time()}, Asia/Dubai\n",
+    "Londono laikas: {london.time()}, Europe/London\n",
+    "New Yorko laikas: {new_york.time()}, America/New York\n",
+    "Los Angeles laikas: {los_angeles.time()}, America/ Los Angeles\"\"\")"
+   ]
   }
  ],
  "metadata": {
@@ -198,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
